--- a/style.css
+++ b/style.css
@@ -43,6 +43,24 @@ footer {
 .add-radius {
   border-radius: 16px;
 }
+.card {
+  padding: 32px 55px 32px 32px;
+  border-radius: 16px;
+  border: 1px solid #fbb56533;
+  background: #fbb5630d;
+}
+.special-card {
+  background: rgba(41, 206, 246, 0.05);
+}
+.card img {
+  margin-bottom: 32px;
+}
+.card h3 {
+  margin-bottom: 16px;
+  color: #131318;
+  font-size: 24px;
+  font-weight: 800;
+}
 
 /* Header area css starts */
 nav {
@@ -159,6 +177,86 @@ select {
 }
 /* Tour css ends */
 
+/* Destination css starts */
+.destination-area {
+  margin-bottom: 100px;
+}
+.destination-text {
+  text-align: center;
+}
+.destination-text h3 {
+  margin-bottom: 24px;
+}
+.destination-text p {
+  margin-bottom: 25px;
+}
+.des-image-1 {
+  grid-area: a;
+}
+.des-image-2 {
+  grid-area: b;
+}
+.des-image-3 {
+  grid-area: c;
+}
+.des-image-4 {
+  grid-area: d;
+}
+.des-image-5 {
+  grid-area: e;
+}
+.des-image-6 {
+  grid-area: f;
+}
+.des-image-7 {
+  grid-area: g;
+}
+.destination-images {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 24px;
+  grid-template-areas:
+    "a a a a a a b b b b b b"
+    "c c c c d d d d d e e e"
+    "f f f f f g g g g g g g";
+}
+.destination-images img {
+  width: 100%;
+  height: 300px;
+}
+.destination-images h5 {
+  text-align: center;
+  position: relative;
+  top: 50%;
+  color: #fff;
+  font-size: 20px;
+}
+
+/* Destination css ends */
+/* CHOOSE AREA CSS starts */
+.choose-area {
+  margin-bottom: 100px;
+}
+.choose-text {
+  text-align: center;
+}
+.choose-text h3 {
+  margin-bottom: 24px;
+}
+.choose-text p {
+  margin-bottom: 24px;
+}
+.choose-card-top {
+  display: flex;
+  gap: 24px;
+  margin-bottom: 24px;
+}
+.choose-card-bottom {
+  width: 50%;
+  margin: 0 auto;
+}
+/* Choose area css ENDS */
+
 /* Responsive Css for Mobile */
 
 @media screen and (max-width: 600px) {
@@ -187,6 +285,9 @@ select {
   }
   .nav-link i {
     display: block;
+  }
+  .card {
+    padding: 20px;
   }
   /* Banner area responsive */
   .banner-area {
@@ -223,6 +324,31 @@ select {
   }
   .tour-text,
   .tour-image {
+    width: 100%;
+  }
+  .destination-text h3 {
+    margin-bottom: 16px;
+  }
+  .destination-text p {
+    margin-bottom: 16px;
+  }
+  .destination-images {
+    grid-template-columns: 1fr;
+    gap: 16px;
+    grid-template-areas:
+      "a"
+      "b"
+      "c"
+      "d"
+      "e"
+      "f"
+      "g";
+  }
+  /* Choose area responsive css */
+  .choose-card-top {
+    flex-direction: column;
+  }
+  .choose-card-bottom {
     width: 100%;
   }
 }
@@ -262,5 +388,26 @@ select {
   .tour-text,
   .tour-image {
     width: 100%;
+  }
+  .destination-text h3 {
+    margin-bottom: 16px;
+  }
+  .destination-text p {
+    margin-bottom: 0;
+  }
+  .destination-images {
+    grid-template-columns: 1fr;
+    gap: 16px;
+    grid-template-areas:
+      "a"
+      "b"
+      "c"
+      "d"
+      "e"
+      "f"
+      "g";
+  }
+  .card {
+    padding: 20px;
   }
 }
