--- a/style.css
+++ b/style.css
@@ -257,6 +257,68 @@ select {
 }
 /* Choose area css ENDS */
 
+/* News area css starts */
+.news-area {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+.news-form {
+  padding: 40px;
+  border-radius: 16px;
+  border: 1px solid #ff5400;
+  max-height: 422px;
+  flex: 1;
+}
+.news-form h3 {
+  margin-bottom: 16px;
+  font-size: 24px;
+}
+.news-form hr {
+  margin: 30px 0;
+  border: 1px solid #1313180d;
+}
+.news-form form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.news-form input {
+  padding: 16px 0;
+  padding-left: 20px;
+  border-radius: 8px;
+  background: #1313180d;
+  border: 0;
+}
+.news-image p {
+  font-size: 24px;
+}
+.news-image h2 {
+  font-size: 32px;
+}
+.news-image img {
+  width: 100%;
+}
+.news-img-text {
+  max-width: 347px;
+  max-height: 120px;
+  background-color: #ff5400;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  color: #fff;
+  position: relative;
+  left: 51.5%;
+  top: -21.5%;
+  transform: rotate(-20deg);
+  transform-origin: bottom left;
+}
+
+/* News area css ends */
+
 /* Footer Area css starts */
 .footer-area {
   padding: 100px 330px;
@@ -295,7 +357,7 @@ select {
 
 /* Responsive Css for Mobile */
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 576px) {
   /* basic responsive css */
   main {
     margin: 20px;
@@ -387,6 +449,32 @@ select {
   .choose-card-bottom {
     width: 100%;
   }
+  /* news area responsive css */
+  .news-area {
+    flex-direction: column;
+    margin-bottom: 0px;
+  }
+  .news-img-text {
+    max-width: 180px;
+    max-height: 70px;
+    background-color: #ff5400;
+    position: relative;
+    border-radius: 8px;
+    padding: 10px;
+    color: #fff;
+    top: -52px;
+    transform: rotate(-20deg);
+  }
+
+  .news-image {
+    flex: 1;
+  }
+  .news-image p {
+    font-size: 10px;
+  }
+  .news-image h2 {
+    font-size: 13px;
+  }
   /* footer area responsive css */
   .footer-area {
     padding: 20px;
@@ -449,6 +537,19 @@ select {
   }
   .card {
     padding: 20px;
+  }
+  .news-area {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  .news-img-text {
+    background-color: #ff5400;
+    position: relative;
+    border-radius: 8px;
+    padding: 10px;
+    color: #fff;
+    top: -100px;
+    transform: rotate(-20deg);
   }
   .footer-area {
     padding: 50px;
