--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ footer {
 .card h3 {
   margin-bottom: 16px;
   color: #131318;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 800;
 }
 
@@ -176,6 +176,33 @@ select {
   width: 100%;
 }
 /* Tour css ends */
+
+/* package area css starts */
+.package-area {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 100px;
+}
+.package-images {
+  max-width: 545px;
+}
+.package-images img {
+  width: 100%;
+}
+.package-text {
+  width: 50%;
+}
+.package-text h2 {
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+.package-text p {
+  margin-bottom: 16px;
+}
+.package-tours h3 {
+  font-size: 18px;
+}
+/* package area css ends */
 
 /* Destination css starts */
 .destination-area {
@@ -363,7 +390,7 @@ select {
     margin: 20px;
   }
   .section-header {
-    font-size: 20px;
+    font-size: 25px;
   }
 
   nav {
@@ -424,6 +451,15 @@ select {
   .tour-image {
     width: 100%;
   }
+  /* package area responsive css */
+  .package-area {
+    flex-direction: column-reverse;
+  }
+  .package-text {
+    width: 100%;
+  }
+
+  /* responsive destination arera */
   .destination-text h3 {
     margin-bottom: 16px;
   }
@@ -485,7 +521,10 @@ select {
 @media screen and (min-width: 600px) and (max-width: 991px) {
   nav,
   main {
-    padding: 50px;
+    padding: 20px;
+  }
+  .section-header {
+    font-size: 24px;
   }
   .nav-logo h2 {
     font-size: 20px;
@@ -500,8 +539,16 @@ select {
     margin: 0 50px;
     margin-bottom: 50px;
   }
+  .banner-text h2 {
+    font-size: 32px;
+    margin-bottom: 10px;
+  }
+  .banner-text p {
+    font-size: 17px;
+    margin-bottom: 10px;
+  }
   .banner-inputs {
-    padding: 14px;
+    padding: 10px;
     gap: 12px;
   }
   .banner-inputs input,
@@ -516,6 +563,15 @@ select {
   .tour-text,
   .tour-image {
     width: 100%;
+  }
+  .package-area {
+    flex-direction: column-reverse;
+  }
+  .package-text {
+    width: 100%;
+  }
+  .package-images {
+    max-width: 100%;
   }
   .destination-text h3 {
     margin-bottom: 16px;
