--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ footer {
   background-color: #ff5400;
   border-radius: 8px;
   border: 0;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #ffffff;
+  color: #ff5400;
+  border: 1px solid #424247;
 }
 .add-radius {
   border-radius: 16px;
@@ -180,8 +186,9 @@ select {
 /* package area css starts */
 .package-area {
   display: flex;
-  gap: 20px;
   margin-bottom: 100px;
+  justify-content: space-between;
+  gap: 20px;
 }
 .package-images {
   max-width: 545px;
@@ -446,6 +453,7 @@ select {
   .tour-area {
     flex-direction: column;
     gap: 24px;
+    margin-bottom: 25px;
   }
   .tour-text,
   .tour-image {
@@ -454,12 +462,16 @@ select {
   /* package area responsive css */
   .package-area {
     flex-direction: column-reverse;
+    margin-bottom: 25px;
   }
   .package-text {
     width: 100%;
   }
 
   /* responsive destination arera */
+  .destination-area {
+    margin-bottom: 25px;
+  }
   .destination-text h3 {
     margin-bottom: 16px;
   }
@@ -468,7 +480,7 @@ select {
   }
   .destination-images {
     grid-template-columns: 1fr;
-    gap: 16px;
+    gap: 0px;
     grid-template-areas:
       "a"
       "b"
@@ -479,6 +491,9 @@ select {
       "g";
   }
   /* Choose area responsive css */
+  .choose-area {
+    margin-bottom: 25px;
+  }
   .choose-card-top {
     flex-direction: column;
   }
@@ -489,6 +504,7 @@ select {
   .news-area {
     flex-direction: column;
     margin-bottom: 0px;
+    margin-bottom: 25px;
   }
   .news-img-text {
     max-width: 180px;
